Implement iframe toggle functionality without state persistence - Fresh iframe on each open/close

--- a/manifest.json
+++ b/manifest.json
@@ -3,22 +3,25 @@
   "name": "WhatsApp Bulk Messenger & Verifier",
   "version": "1.0",
   "description": "Send bulk messages and verify WhatsApp numbers via WhatsApp Web.",
-  "permissions": [
-    "scripting",
-    "activeTab",
-    "downloads"
-  ],
-  "host_permissions": [
-    "https://web.whatsapp.com/*"
-  ],
-  "action": {
-    "default_popup": "popup.html"
+  "permissions": ["scripting", "activeTab", "downloads", "tabs"],
+  "background": {
+    "service_worker": "background.js"
   },
+  "action": {
+    "default_title": "WhatsApp Bulk Tool"
+  },
+  "host_permissions": ["https://web.whatsapp.com/*"],
   "content_scripts": [
     {
       "matches": ["https://web.whatsapp.com/*"],
-      "js": ["content.js"],
+      "js": ["libs/xlsx.full.min.js", "content.js"],
       "run_at": "document_idle"
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["popup.html", "popup.js", "libs/xlsx.full.min.js"],
+      "matches": ["<all_urls>"]
+    }
   ]
-} 
+}
